--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
 <resources>
     <string name="app_name">RegexGolf</string>
+
+    <string name="title_activity_play_menu">PlayMenuActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="campaign">Campaign</string>
+    <string name="generated">Generated</string>
+    <string name="challenge">Challenge</string>
+    <string name="duel">Duel</string>
+    <string name="windings">Windings</string>
+    <string name="play">Play</string>
+    <string name="settings">Settings</string>
+    <string name="leaderboard">Leaderboard</string>
+    <string name="about_us">About Us</string>
+    <string name="help">Help</string>
+    <string name="exit">Exit</string>
 </resources>
