--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,5 @@
     <string name="whats_regex_golf">What is Regex Golf\nRegex golf is about finding a pattern that matches the words in the left column but doesn\'t match the ones in the right.\nThe goal is to use the least amount of characters to create such a regex, much like you try to hit the ball into the hole in golf using the least amount of strokes.</string>
     <string name="help_basics">Basics\nSimply writing a character, or a string of characters means a word contains what you wrote.\nUsing brackets you can define alternatives.\nFor example, gr[ae]y matches both gray and grey.\nDashes help you shorten large groups of alternatives.\nFor example, dun[e-k] matches dune, dung, and dunk.\nUse the dot character the define wildcards that match any one character.</string>
     <string name="regex_handbook">Regex handbook</string>
-    <string name="tap_to_expand">Tap on any topic to expand it</string>
+    <string name="tap_to_expand">Double tap on any topic to expand it</string>
 </resources>
